# commit-buddy

./: Cargo.toml  README.md  env.example  loading_dialog_fixes.sh
src/: ai.rs  config.rs  git.rs  github.rs  interactive.rs  lib.rs  main.rs  test_ai.rs  test_linter.rs  utils.rs
tests/: ai_generated_tests.rs  simple_tests.rs  test_with_errors.rs
