[package]
name = "commit-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

# Git & GitHub
git2 = "0.18"
octocrab = "0.39"

# OpenAI
async-openai = "0.23"